Fix spacing

--- a/style/main.scss
+++ b/style/main.scss
@@ -71,7 +71,7 @@ body {
   &__description {
     font-size: 1.5rem;
     font-weight: 400;
-    line-height: 2.5;
+    line-height: 1.65;
     letter-spacing: 0.01rem;
     opacity: 50%;
   }
